--- a/웹프/templates/learnCSS/codeEditor.html
+++ b/웹프/templates/learnCSS/codeEditor.html
@@ -70,10 +70,15 @@
                     output.innerHTML = HTMLValue;
                     outputstyle.innerHTML = CSSValue;
                 }
+                const save = () => {
+                    const CSSValue = css.getValue();    
+                    const HTMLValue = html.getValue();
+                }
             </script>
         </div>
         <div>
             <input type="button" onclick="run()" value="RUN" style="width: 5vh; height: 3vh; margin: 1.5vh 0;">
+            
         </div>
         <div style="width: 50vw; height: 30vh; border: 1px solid gray; background-color: gray;">
             <div class="output" style="height: 100%;">
